--- a/templates/f1-demo-aws-master-ecs.template
+++ b/templates/f1-demo-aws-master-ecs.template
@@ -120,25 +120,21 @@
         },
         "ClusterInstanceType": {
             "AllowedValues": [
-                "t3.large",
                 "t3.xlarge",
                 "t3.2xlarge",
-                "m5.large",
                 "m5.xlarge",
                 "m5.2xlarge",
                 "m5.4xlarge",
                 "m5.12xlarge",
-                "c5n.large",
                 "c5n.xlarge",
                 "c5n.2xlarge",
                 "c5n.4xlarge",
-                "c5.large",
                 "c5.xlarge",
                 "c5.2xlarge",
                 "c5.4xlarge"
             ],
             "ConstraintDescription": "ClusterInstanceType must be a valid EC2 instance type.",
-            "Default": "t3.large",
+            "Default": "t5.xlarge",
             "Description": "Select an instance type for EC2 instances to be created in the ECS cluster.",
             "Type": "String"
         },
